ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::LanguageExtensions
Parameters:
  myVPC:
    Type: String
    Default: "vpc-0a7e507ae6849cf80"
    Description: Enter vpc id
  InstanceList:
    Type: CommaDelimitedList
    Default: "instance1,instance2"
  instanceType:
    Type: String
    Default: "t2.micro"
    AllowedValues: ["t2.micro","t2.small","t2.medium"]
Mappings: 
  RegionMap: 
    us-east-1: 
      HVM64: "ami-0005e0cfe09cc9050"
      HVMG2: "ami-0005e0cfe09cc9050"
    us-west-1: 
      HVM64: "ami-0bdb828fd58c52235"
      HVMG2: "ami-066ee5fd4a9ef77f1"
    eu-west-1: 
      HVM64: "ami-047bb4163c506cd98"
      HVMG2: "ami-31c2f645"
    ap-southeast-1: 
      HVM64: "ami-08569b978cc4dfa10"
      HVMG2: "ami-0be9df32ae9f92309"
    ap-northeast-1: 
      HVM64: "ami-06cd52961ce9f0d85"
      HVMG2: "ami-053cdd503598e4a9d"
Resources:
  # Fn::ForEach::Instances:
  #   - InstanceLogicalId
  #   - !Ref InstanceList
  #   - ${InstanceLogicalId}:
  #       Type: AWS::EC2::Instance
  #       Properties:
  #         ImageId: !FindInMap
  #           - RegionMap
  #           - !Ref 'AWS::Region'
  #           - HVM64
  #         InstanceType: !Ref instanceType
  #         KeyName: !Ref MyKeyPair
  #         SecurityGroupIds: 
  #           - !Ref InstanceSecurityGroup
  #         SubnetId: "subnet-09377a43c76e65fdb"
  MyKeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: "MyKeyPair"
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
  
  MyEC2Instance: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: 
         !FindInMap
          - RegionMap
          - !Ref 'AWS::Region'
          - HVM64
      KeyName: !Ref MyKeyPair
      InstanceType: !Ref instanceType
      SecurityGroupIds: 
        - !Ref InstanceSecurityGroup
      SubnetId: "subnet-09377a43c76e65fdb"
      UserData: 
        Fn::Base64: 
          Fn::Sub:
          #!/bin/bash -xe
          sudo yum update -y
          sudo yum install -y httpd.x86_64
          sudo service httpd start
          sudo service httpd enable
          echo "<h1>Deployed ELB Instance Example 1</h1>" | sudo tee /var/www/html/index.html
